SET(EXECNAME grid_layering)
PROJECT(UTILAPPS_${EXECNAME})
################ Add executables #################
file(GLOB SRC_LIST *.cpp *.h)
geo_include_directories(${GDAL_INCLUDE_DIR} ${BSON_INCLUDE_DIR} ${MONGOC_INCLUDE_DIR} ${CCGL_INC})
ADD_EXECUTABLE(${EXECNAME} ${SRC_LIST})
SET_TARGET_PROPERTIES(${EXECNAME} PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX})
target_link_libraries(${EXECNAME} ${CCGLNAME} ${GDAL_LIBRARIES} ${BSON_LIBRARIES} ${MONGOC_LIBRARIES})
### For LLVM-Clang installed by brew, add link library of OpenMP explicitly.
IF(CV_CLANG AND LLVM_VERSION_MAJOR)
    TARGET_LINK_LIBRARIES(${EXECNAME} ${OpenMP_LIBRARY})
ENDIF()
INSTALL(TARGETS ${EXECNAME}
        RUNTIME DESTINATION "${INSTALL_DIR}/bin"
        PUBLIC_HEADER DESTINATION "${INSTALL_DIR}/include"
        ARCHIVE DESTINATION "${INSTALL_DIR}/lib"
        LIBRARY DESTINATION "${INSTALL_DIR}/lib")

LIST(APPEND UTILS_APPS ${EXECNAME})
SET(UTILS_APPS "${UTILS_APPS}" PARENT_SCOPE)

IF (MSVC OR XCODE)
    SET_PROPERTY(TARGET ${EXECNAME} PROPERTY FOLDER "UtilApps")
ENDIF ()
MESSAGE(STATUS "    Compiling ${EXECNAME} done")
