SET(EXECNAME import_raster)
PROJECT(UTILAPPS_${EXECNAME})
################ Add executables #################
file(GLOB SRC_LIST *.cpp *.h)
geo_include_directories(${GDAL_INCLUDE_DIR} ${BSON_INCLUDE_DIR} ${MONGOC_INCLUDE_DIR} ${CCGL_INC})
ADD_EXECUTABLE(${EXECNAME} ${SRC_LIST})
target_link_libraries(${EXECNAME} ${CCGLNAME} ${GDAL_LIBRARIES} ${BSON_LIBRARIES} ${MONGOC_LIBRARIES})
install(TARGETS ${EXECNAME} DESTINATION ${INSTALL_DIR})

LIST(APPEND UTILS_APPS ${EXECNAME})
SET(UTILS_APPS "${UTILS_APPS}" PARENT_SCOPE)

IF (MSVC OR XCODE)
    SET_PROPERTY(TARGET ${EXECNAME} PROPERTY FOLDER "UtilApps")
ENDIF ()
MESSAGE(STATUS "    Compiling ${EXECNAME} done")
